* Mentioned html folder name in html_and_css * Added file html_and_css/css/css.css * Renamed file html/index.html -> html_and_css/html/index.html

--- a/html_and_css/html/index.html
+++ b/html_and_css/html/index.html
@@ -4,42 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="#">
-    <style>
-        .myDiv {
-            border: 5px outset red;
-            background-color: lightblue;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/Users/serojisahakyan/Desktop/svarto/html_and_css/css/css.css">
     <base href="https://www.w3schools.com/" target="_blank">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>homework</h1>
+    <h1 id="hoVmework">homework</h1>
     <address>
-        <p>
+        <p class="intro">
             <a href="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*BmBqwfFeCOfluj7Rgfmt-A.jpeg">Lorem</a>
             ipsum dolor sit amet consectetur adipisicing elit. Sit voluptate modi distinctio facere nobis ipsum
             beatae
             quis cum, tempore iure, corrupti aliquam quisquam non, aliquid maiores assumenda unde itaque atque.
         </p>
         <a href="#">
-            <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*BmBqwfFeCOfluj7Rgfmt-A.jpeg" width="500"
-                height="100">
+            <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*BmBqwfFeCOfluj7Rgfmt-A.jpeg">
         </a>
         <br>
         <abbr title="Sergey Grigori Isahajyan">SGI</abbr>
     </address>
     <!--????-->
     <article>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minus, tempore aspernatur, fuga ratione sint
+            exercitationem earum, voluptatibus dolorem impedit perspiciatis quisquam animi excepturi possimus eaque!
+            Aperiam quod quibusdam omnis!
+        </p>
         <h2>H2</h2>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio provident, quisquam recusandae odit culpa
             dolore praesentium officiis, facilis totam, labore inventore voluptas velit cupiditate maxime facere ratione
             voluptatem! Necessitatibus, nobis!
         </p>
+
     </article>
     <!-- ??? -->
     <aside>
@@ -109,6 +107,7 @@
     </details>
     <p><dfn>HTML</dfn> is the standard markup language for creating web pages.</p>
     <dialog open>This is an open dialog window</dialog>
+    <p>fhvaskaskvasvkj</p>
     <ul>
         <li>html</li>
         <li>JS</li>
@@ -141,7 +140,7 @@
     <footer>
         <hr>
         <br>
-        <a href="mailto:Seroj.2004@icloud.com">Seroj.2004@icloud.com</a>
+        <a href="mailto:Seroj.2004@icloud.com" target="_blank">Seroj.2004@icloud.com</a>
         <h1>This is <i>heading<i></i> 1</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
@@ -167,6 +166,24 @@
     </nav>
     <object data="snippet.html" width="500" height="200">
     </object>
+
+    <img src="/Users/serojisahakyan/Desktop/svarto/html_and_css/css/baxbani.jpg" title="klematis flower">
+    <img src="/Users/serojisahakyan/Desktop/svarto/html_and_css/css/cake.jpg" title="flowers">
+    <img src="/Users/serojisahakyan/Desktop/svarto/html_and_css/css/dog.jpg" title="landscape">
+
+    <p lang="en">Hello!</p>
+    <p lang="en-us">Hi!</p>
+    <p lang="en-gb">Ello!</p>
+    <p lang="us">Hi!</p>
+    <p lang="no">Hei!</p>
+
+    <div class="first_test">The first div element.</div>
+    <div class="second">The second div element.</div>
+    <div class="test">The third div element.</div>
+    <div class="test_ex">The fourth div element.</div>
+    <p class="test">This is a paragraph.</p>
+    <p class="test_ex">This is a paragraph.</p>
+
 </body>
 
 </html>
